--- a/src/GCF/FrontBundle/Resources/translations/messages.ar_TN.yml
+++ b/src/GCF/FrontBundle/Resources/translations/messages.ar_TN.yml
@@ -5,6 +5,8 @@ menu:
   Publications: المنشورات
   E-learning: التعلم الإلكتروني
   Search: بحث
+  News: أخبار
+  GreenBlogger: المدون الأخضر
 
 core:
   Hello: السلام عليكم !
