--- a/src/GCF/FrontBundle/Resources/translations/messages.en.yml
+++ b/src/GCF/FrontBundle/Resources/translations/messages.en.yml
@@ -5,6 +5,8 @@ menu:
   Publications: Publications
   E-learning: E-learning
   Search: Search
+  News: News
+  GreenBlogger: Green Blogger
 
 core:
   Hello: Hello !
