--- a/src/GCF/FrontBundle/Resources/translations/messages.fr.yml
+++ b/src/GCF/FrontBundle/Resources/translations/messages.fr.yml
@@ -5,6 +5,8 @@ menu:
   Publications: Publications
   E-learning: E-learning
   Search: Rechercher
+  News: Actualités
+  GreenBlogger: Green Blogger
 
 core:
   Hello: Bonjour !
